--- a/Templates/SimpleComment/config/theme.ini
+++ b/Templates/SimpleComment/config/theme.ini
@@ -1,7 +1,7 @@
 [info]
-name = "Default"
-version = "1.6.0"
-author = "Omeka Team"
+name = "SimpleComment"
+version = "0.0.1"
+author = "Thi Hang Nga NGUYEN for Laboratoire Paragraphe"
 ;description = ""
 ;theme_link = ""
 author_link = "https://omeka.org/"
@@ -30,5 +30,5 @@ elements.footer.name = "footer"
 elements.footer.attributes.id = "footer"
 elements.footer.type = "Omeka\Form\Element\HtmlTextarea"
 elements.footer.options.label = "Footer Content"
-elements.footer.options.info = "HTML content to appear in the footer"
+elements.footer.options.info = "SimpleComment by Thi Hang Nga NGUYEN for Laboratoire Paragraphe"
 elements.footer.attributes.value = "Powered by Omeka S"
