--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 TDD/.DS_Store
 TDD/modules
 TDD/omk-lireensemble.sql.zip
+Templates/.DS_Store
+Templates/.DS_Store
+Templates/omk/.DS_Store
+Templates/omk/application/.DS_Store
