ajout page stats

--- a/themes/SimpleComment/config/theme.ini
+++ b/themes/SimpleComment/config/theme.ini
@@ -7,6 +7,8 @@ author = "Thi Hang Nga NGUYEN for Laboratoire Paragraphe"
 author_link = "https://omeka.org/"
 omeka_version_constraint = "^3.0.0"
 
+helpers[] = commentStats
+
 [config]
 elements.accent_color.name = "accent_color"
 elements.accent_color.type = "Omeka\Form\Element\ColorPicker"
