--- a/themes/default/config/theme.ini
+++ b/themes/default/config/theme.ini
@@ -8,6 +8,7 @@ author_link = "https://omeka.org/"
 omeka_version_constraint = "^3.0.0"
 
 helpers[] = cmap
+helpers[] = ajaxPos
 
 [config]
 elements.accent_color.name = "accent_color"
